--- a/FoodCraft/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_recipe_detail.xml
@@ -9,15 +9,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/activity_recipe_detail_toolbar" />
-
         <com.android.volley.toolbox.NetworkImageView
             android:layout_width="fill_parent"
             android:layout_height="300dp"
             android:id="@+id/recipe_image"
-            android:layout_below="@id/toolbar"
             android:layout_gravity="center_horizontal"
             android:layout_weight="0.43"
             android:scaleType="fitXY"
@@ -27,6 +22,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="10dp"
+            android:layout_margin="10dp"
             android:paddingLeft="10dp"
             android:paddingRight="10dp"
             android:textAppearance="?android:attr/textAppearanceLarge"
@@ -44,6 +40,49 @@
         <View
             android:layout_width="365dp"
             android:layout_height="2dp"
+            android:layout_marginLeft="10dp"
+            android:background="#a62128"/>
+
+        <LinearLayout
+            android:orientation="horizontal"
+            android:layout_width="fill_parent"
+            android:layout_height="50dp">
+
+
+            <LinearLayout
+                android:orientation="horizontal"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="5dp"
+                android:layout_marginLeft="120dp"
+                android:gravity="center_vertical|center_horizontal"
+                android:paddingLeft="10dp"
+                android:paddingRight="10dp">
+
+
+                <Button
+                    android:layout_width="wrap_content"
+                    android:layout_height="40dp"
+                    android:text="View Recipe"
+                    android:id="@+id/view_recipe"
+                    android:background="@drawable/rounded_corner"
+                    android:textAppearance="?android:attr/textAppearanceLarge"
+                    android:paddingLeft="10dp"
+                    android:paddingRight="10dp"
+                    android:linksClickable="true"
+                    android:fontFamily="sans-serif-medium"
+                    android:textColor="#ffffff"
+                    android:gravity="center_vertical|center_horizontal"
+                    style="@style/TextAppearance.AppCompat.Title"
+                    android:onClick="viewRecipe"
+                    android:clickable="true" />
+            </LinearLayout>
+
+
+        </LinearLayout>
+        <View
+            android:layout_width="365dp"
+            android:layout_height="1dp"
             android:layout_marginLeft="10dp"
             android:background="#a62128"/>
 
@@ -252,46 +291,8 @@
                 android:fontFamily="sans-serif-condensed"
                 android:textColor="#000000"
                 android:gravity="left"
-                android:textSize="15dp"
-                android:onClick="glossarySearch"
-                style="@style/Base.TextAppearance.AppCompat.Small" />
-
-
-        </LinearLayout>
-
-
-
-        <LinearLayout
-            android:orientation="horizontal"
-            android:layout_width="fill_parent"
-            android:layout_height="50dp"
-            android:background="#a62128">
-
-
-            <LinearLayout
-                android:orientation="horizontal"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="120dp"
-                android:layout_marginTop="10dp"
-                android:paddingLeft="10dp"
-                android:paddingRight="10dp">
-
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:textAppearance="?android:attr/textAppearanceLarge"
-                    android:paddingLeft="5dp"
-                    android:text="View Recipe"
-                    android:id="@+id/textView6"
-                    android:linksClickable="true"
-                    android:fontFamily="sans-serif-medium"
-                    android:textColor="#ffffff"
-                    android:textIsSelectable="false"
-                    style="@style/TextAppearance.AppCompat.Title" />
-
-
-            </LinearLayout>
+                style="@style/Base.TextAppearance.AppCompat.Small"
+                android:textSize="15dp" />
 
 
         </LinearLayout>
