--- a/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
+++ b/FoodCraft/app/src/main/res/layout/content_ingredient_search.xml
@@ -39,11 +39,12 @@
                 app:showAsAction="always|collapseActionView"
                 android:icon="@android:drawable/ic_menu_search"
                 android:id="@+id/menu_item_search"
+                android:clickable="true"
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:title="Search"
                 android:queryHint="Find recipes with..."
-                android:iconifiedByDefault="true"
+                android:iconifiedByDefault="false"
                 android:layout_weight="8"
                 android:focusable="false"
                 android:focusableInTouchMode="false"
