--- a/FoodCraft/app/src/main/res/layout/activity_recipe_detail.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_recipe_detail.xml
@@ -170,7 +170,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Nutrition  "
+                    android:text="Nutrition :  "
                     android:layout_marginTop="10dp"
                     android:paddingLeft="10dp"
                     android:layout_gravity="center_horizontal"
