--- a/FoodCraft/app/src/main/res/layout/activity_recipe_detail_toolbar.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_recipe_detail_toolbar.xml
@@ -3,7 +3,7 @@
 
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:id="@+id/ingredientsearchtoolbar"
+    android:id="@+id/recipedetailtoolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="#A62128"
@@ -11,11 +11,17 @@
     app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     <TextView
-        android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="center_vertical"
-        android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@android:color/white" />
+        android:layout_gravity="right"
+        android:id="@+id/grocerystores"
+        android:textSize="10sp"
+        android:background="@null"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        android:textColor="#FFF"
+        android:text="Find \nGrocery"/>
+
 
 </android.widget.Toolbar>
+
