--- a/FoodCraft/app/src/main/res/layout/spintoolbar.xml
+++ b/FoodCraft/app/src/main/res/layout/spintoolbar.xml
@@ -10,6 +10,7 @@
         android:id="@+id/spinner_nav"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:dropDownVerticalOffset="@dimen/dropDownVerticalOffset" />
+        android:dropDownVerticalOffset="@dimen/dropDownVerticalOffset"
+        />
 
 </android.support.v7.widget.Toolbar>
