--- a/FoodCraft/app/src/main/res/layout/spintoolbaractivity.xml
+++ b/FoodCraft/app/src/main/res/layout/spintoolbaractivity.xml
@@ -3,7 +3,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#FFFFFF"
-    android:orientation="vertical" >
+    android:orientation="vertical"
+    android:layout_gravity="right">
 
     <include
         android:id="@+id/toolbar"
