--- a/FoodCraft/app/src/main/res/layout/activity_view_recipe.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_view_recipe.xml
@@ -1,10 +1,20 @@
+<?xml version="1.0" encoding="utf-8"?>
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical">
+
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/activity_view_recipe_toolbar" />
+
 <WebView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:layout_below="@+id/toolbar"
     android:fillViewport="false"
     android:id="@+id/webview"
     android:background="#ffffff">
 
-
-
 </WebView>
+</LinearLayout>
