--- a/FoodCraft/app/src/main/res/menu/menu_main.xml
+++ b/FoodCraft/app/src/main/res/menu/menu_main.xml
@@ -3,9 +3,9 @@
       xmlns:tools="http://schemas.android.com/tools"
       tools:context=".MainActivity">
 
-      <item android:id="@+id/action_settings"
-          android:title="@string/action_settings"
-          android:orderInCategory="100"
-          app:showAsAction="never"/>
+    <item android:id="@+id/action_search"
+        android:icon="@drawable/settings2"
+        android:title="Settings"
+        android:showAsAction="always|withText"/>
 
 </menu>
