--- a/FoodCraft/app/src/main/res/layout/activity_maps.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_maps.xml
@@ -3,4 +3,5 @@
     xmlns:map="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"
     android:layout_height="match_parent" android:id="@+id/map"
     tools:context="sfsu.csc413.foodcraft.MapsActivity"
-    android:name="com.google.android.gms.maps.SupportMapFragment" />
+    android:name="com.google.android.gms.maps.SupportMapFragment"
+    map:cameraZoom="12ixe"/>
