--- a/FoodCraft/app/src/main/res/layout/activity_cardview_toolbar.xml
+++ b/FoodCraft/app/src/main/res/layout/activity_cardview_toolbar.xml
@@ -4,12 +4,11 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/toolbar"
-    android:layout_height="wrap_content"
     android:layout_width="match_parent"
+    android:layout_height="wrap_content"
     android:background="#A62128"
     android:minHeight="?attr/actionBarSize"
-    app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-    >
+    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
 
     <Spinner
         android:id="@+id/spinner_nav"
