--- a/FoodCraft/app/src/main/res/menu/menu_activity_sharedpreferences.xml
+++ b/FoodCraft/app/src/main/res/menu/menu_activity_sharedpreferences.xml
@@ -2,7 +2,10 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     tools:context="sfsu.csc413.foodcraft.activity_sharedpreferences">
-    <item android:id="@+id/action_settings" android:title="@string/action_settings"
-        android:orderInCategory="100" app:showAsAction="never" />
-    
+    <item
+        android:id="@+id/action_settings"
+        android:orderInCategory="100"
+        android:title="@string/action_settings"
+        app:showAsAction="never" />
+
 </menu>
