--- a/FoodCraft/app/src/main/res/menu/menu_main.xml
+++ b/FoodCraft/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,12 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-      xmlns:app="http://schemas.android.com/apk/res-auto"
-      xmlns:tools="http://schemas.android.com/tools"
-      tools:context=".MainActivity">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
 
-    <item android:id="@+id/action_search"
+    <item
+        android:id="@+id/action_search"
         android:icon="@drawable/settings2"
         android:title="Settings"
-        android:showAsAction="always|withText"/>
+        android:showAsAction="always|withText" />
 
 </menu>
