--- a/FoodCraft/app/src/main/res/menu/menu_shared_preferences.xml
+++ b/FoodCraft/app/src/main/res/menu/menu_shared_preferences.xml
@@ -4,11 +4,12 @@
     tools:context="sfsu.csc413.foodcraft.SharedPreferences">
 
 
-    <item android:id="@+id/action_search"
+    <item
+        android:id="@+id/action_search"
         android:icon="@drawable/maps"
         android:title="Search"
         android:showAsAction="ifRoom"
         android:orderInCategory="1"
-        android:menuCategory="secondary"/>
+        android:menuCategory="secondary" />
 
 </menu>
