--- a/FoodCraft/app/src/main/res/menu/menu_view_recipe.xml
+++ b/FoodCraft/app/src/main/res/menu/menu_view_recipe.xml
@@ -1,5 +1,6 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context="sfsu.csc413.foodcraft.ViewRecipe">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context="sfsu.csc413.foodcraft.ViewRecipe">
 
 </menu>
